fix nav bar collapse in mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,7 +2,6 @@
     font-family: 'Sukhumvit';
     src: url('../assets/fonts/sukhumvit.woff');
 }
-
 ::-webkit-scrollbar {
     display: none;
 }
@@ -26,37 +25,45 @@ html {
     width: 100%;
 }
 @media(min-width:767px) {
-    .navbar {
-        -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
-        transition: background .5s ease-in-out, padding .5s ease-in-out;
-    }
     .top-nav-collapse {
         padding: 0;
     }
     #content-container {
-      padding-left: 20%;
-      padding-right: 20%;
+        padding-left: 20%;
+        padding-right: 20%;
     }
 }
 
 /*mobile view*/
-@media(max-width:767px) {
-  #awards-panel {
-    display: none;
-  }
-  #content-container {
-    padding-left: 10%;
-    padding-right: 10%;
-  }
-  .vote-item-container {
-    display: inline-block !important;
-    width: 100%;
-  }
-  .score-container {
-    margin-top: 10px;
-    margin-left: 0px !important;
-  }
+
+@media(max-width:768px) {
+    #awards-panel {
+        display: none;
+    }
+    #content-container {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .vote-item-container {
+        display: inline-block !important;
+        width: 100%;
+    }
+    .score-container {
+        margin-top: 10px;
+        margin-left: 0px !important;
+    }
+    .navbar-collapse.collapse {
+        display: block!important;
+    }
+    .navbar-nav>li, .navbar-nav {
+        float: left !important;
+    }
+    .navbar-nav.navbar-right:last-child {
+        margin-right: -15px !important;
+    }
+    .navbar-right {
+        float: right!important;
+    }
 }
 .navbar {
     background-repeat: no-repeat;
@@ -118,8 +125,8 @@ html {
     padding: 0px;
     border: 0px;
     border-radius: 0px;
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
     margin: 0px;
 }
 .thumbnail> img {
@@ -131,7 +138,7 @@ html {
     display: block;
     -webkit-transition: 0.6s;
     height: 100%;
-    width:100%;
+    width: 100%;
     transition: 0.6s;
 }
 .thumbnail-content {
@@ -148,7 +155,7 @@ html {
     text-align: center;
     -webkit-transition: 0.6s;
     transition: 0.6s;
-    margin:5px
+    margin: 5px
 }
 .thumbnail-content:hover {
     opacity: 0;
@@ -257,96 +264,79 @@ hr {
     top: 0;
     left: 0;
 }
-
 #first-page {
-  background: rgb(244,226,156);
-    background: -moz-linear-gradient(45deg, rgba(18,190,210,0) 0%, rgba(231,9,130,1) 100%), -moz-linear-gradient(left, rgba(18,190,210,1) 0%, rgba(130,96,87,1) 100%);
-    background: -webkit-linear-gradient(45deg, rgba(18,190,210,0) 0%,rgba(231,9,130,1) 100%), -webkit-linear-gradient(left, rgba(18,190,210,1) 0%,rgba(130,96,87,1) 100%);
-    background: -o-linear-gradient(45deg, rgba(18,190,210,0) 0%,rgba(231,9,130,1) 100%), -o-linear-gradient(left, rgba(18,190,210,1) 0%,rgba(130,96,87,1) 100%);
-    background: -ms-linear-gradient(45deg, rgba(18,190,210,0) 0%,rgba(231,9,130,1) 100%), -ms-linear-gradient(left, rgba(18,190,210,1) 0%,rgba(130,96,87,1) 100%);
-    background: linear-gradient(45deg, rgba(18,190,210,0) 0%,rgba(231,9,130,1) 100%), linear-gradient(to right, rgba(18,190,210,1) 0%,rgba(130,96,87,1) 100%);
+    background: rgb(244, 226, 156);
+    background: -moz-linear-gradient(45deg, rgba(18, 190, 210, 0) 0%, rgba(231, 9, 130, 1) 100%), -moz-linear-gradient(left, rgba(18, 190, 210, 1) 0%, rgba(130, 96, 87, 1) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(18, 190, 210, 0) 0%, rgba(231, 9, 130, 1) 100%), -webkit-linear-gradient(left, rgba(18, 190, 210, 1) 0%, rgba(130, 96, 87, 1) 100%);
+    background: -o-linear-gradient(45deg, rgba(18, 190, 210, 0) 0%, rgba(231, 9, 130, 1) 100%), -o-linear-gradient(left, rgba(18, 190, 210, 1) 0%, rgba(130, 96, 87, 1) 100%);
+    background: -ms-linear-gradient(45deg, rgba(18, 190, 210, 0) 0%, rgba(231, 9, 130, 1) 100%), -ms-linear-gradient(left, rgba(18, 190, 210, 1) 0%, rgba(130, 96, 87, 1) 100%);
+    background: linear-gradient(45deg, rgba(18, 190, 210, 0) 0%, rgba(231, 9, 130, 1) 100%), linear-gradient(to right, rgba(18, 190, 210, 1) 0%, rgba(130, 96, 87, 1) 100%);
     background-size: cover;
     color: white;
 }
-
 .time {
     display: block;
     text-align: center;
     padding: 20px 20px;
 }
-
 .box-time {
     display: inline-block;
     text-align: center;
     padding: 0px 20px 0px 20px;
     // border-right: 1px solid #ffffff; --> check on Timer.jsx render() method
 }
-
 .box-time h1 {
     font-size: 4em;
     margin: 0;
 }
-
 .box-time p {
     margin: 0;
 }
-
 #awards-panel {
-  /*background-color: white;*/
-  background-color: rgba(255,255,255,0.17);
+    /*background-color: white;*/
+    background-color: rgba(255, 255, 255, 0.17);
 }
-
 .flex-center-y {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
-
 .flex-center-x {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-
 .alt {
-  background: #F5F5F5;
+    background: #F5F5F5;
 }
-
 .thin {
-  font-weight: 300;
+    font-weight: 300;
 }
-
 .navbar-nav>li>a {
-  margin: 0px 20px 0px 0px;
-  padding: 0px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  line-height: 15px;
-  font-weight: 300;
+    margin: 0px 20px 0px 0px;
+    padding: 0px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    line-height: 15px;
+    font-weight: 300;
 }
-
 .thin-gray {
-  color: rgba(107,104,109,0.7);
+    color: rgba(107, 104, 109, 0.7);
 }
-
 #thumbnail-container {
-  padding: 20px 35px;
-  background-color: white;
+    padding: 20px 35px;
+    background-color: white;
 }
-
 .project-thumbnail {
-  height: 250px;
-  text-align: center;
-  margin: 6px;
+    height: 250px;
+    text-align: center;
+    margin: 6px;
 }
-
 #signin-container {
-  margin: 10px;
-  padding: 10px 80px;
-  background-color: rgba(255,255,255,0.17);
-  position: relative;
+    margin: 10px;
+    padding: 10px 80px;
+    background-color: rgba(255, 255, 255, 0.17);
+    position: relative;
 }
-
-
 .button-success {
     background-color: #64DDBB;
     padding-top: 7px;
@@ -359,60 +349,50 @@ hr {
     background-color: #7DE3C6;
     transition: 0.5s;
 }
-
 .button-block {
-  width: 100%;
+    width: 100%;
 }
-
 input::-webkit-input-placeholder {
-  font-weight: 300;
+    font-weight: 300;
 }
-
 .back {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 15px;
-  margin-left: 15px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 15px;
+    margin-left: 15px;
 }
-
 .pointer {
-  cursor: pointer;
+    cursor: pointer;
 }
-
 #content-container {
-  background: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
+    background: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-
 .score {
-  cursor: pointer;
-  height: 30px;
-  width: 30px;
-  border-radius: 3000px;
-  display: inline-flex;
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+    border-radius: 3000px;
+    display: inline-flex;
 }
 .score-normal {
-  background-color: #DDDDDD;
-  transition: 0.2s;
-  color: black;
+    background-color: #DDDDDD;
+    transition: 0.2s;
+    color: black;
 }
-
 .score-selected {
-  background-color: #64DDBB;
-  transition: 0.2s;
-  color: white;
+    background-color: #64DDBB;
+    transition: 0.2s;
+    color: white;
 }
-
 .no-margin {
-  margin: 0px;
+    margin: 0px;
 }
-
 .shadow {
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.05), 2px 2px 2px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.05), 2px 2px 2px 2px rgba(0, 0, 0, 0.05);
 }
-
 .text-area {
-  height: 200px !important;
+    height: 200px !important;
 }
